# goose-orchestrator

./: .gitignore  GOOSE_TEST_PROMPT.md  LICENSE  README.md  build-app.sh  pyproject.toml
.claude/: launch.json
config/: default_config.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/Layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/shared/: PanelCard.tsx  StatusBadge.tsx
frontend/src/lib/: design-tokens.ts
frontend/src/views/: DashboardView.tsx  ModelsView.tsx  SettingsView.tsx  StatusView.tsx  WorkersView.tsx
macos/: Info.plist  launch
src/goose_orchestrator/: __init__.py  __main__.py  cli.py  config_manager.py  crew_manager.py  model_pool.py  orchestrator.py  router.py  server.py  tools.py  worker.py
src/goose_orchestrator/backend/: app.py
src/goose_orchestrator/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
src/opencode_orchestrator/: __init__.py  __main__.py  cli.py  config_manager.py  model_pool.py  orchestrator.py  router.py  server.py  tools.py  worker.py
src/opencode_orchestrator/backend/: app.py
src/opencode_orchestrator/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
tests/: test_backend_api.py  test_config_manager.py  test_crew_manager.py  test_model_pool.py  test_router.py
